Replaced URL with URI.